# rust-api-ddd

./: .docker.env  .env  .gitignore  Cargo.toml  LICENSE  docker-compose.yaml  docker.env
data/: users.json
docker/: Dockerfile
src/: lib.rs  main.rs
src/scope/: mod.rs
src/scope/healthy/: healthcheck.rs
src/scope/users/: mod.rs
src/scope/users/application/: user_register.rs
src/scope/users/domain/: mod.rs  user.rs  userEntitySeaOrm.rs  user_email.rs  user_id.rs  user_pwd.rs  user_repository.rs  users_errors.rs
src/scope/users/infraestructure/: mod.rs  register.rs
src/scope/users/infraestructure/controller/: mod.rs  register_put_controller.rs
src/scope/users/infraestructure/persistence/: PostgresqlUserRepository.rs  memory.rs  mod.rs
src/shared/: mod.rs
src/shared/domain/: agregate_root.rs  mod.rs  responder.rs
src/shared/infraestruture/: mod.rs  server.rs
src/shared/infraestruture/controllers/: controller.rs
src/shared/infraestruture/dependency_injection/: container  mod.rs
src/shared/infraestruture/router/: healthy.rs  index.rs  mod.rs  register_users.rs  users.rs
src/shared/infraestruture/seaorm/: mod.rs  sea_orm_config.rs  sea_orm_config.txt  seaorm_client_factory.rs  seaorm_config.rs  seaorm_repository.rs
src/shared/infraestruture/seaorm/config/: dev.env
tests/: common.rs  healthy.rs  register.rs
tests/scope_test/users/application/: mod.rs  user_register.rs
tests/scope_test/users/domain/: mod.rs  user_mother.rs
