[package]
name = "apiusers"
version = "0.1.0"
edition = "2018"
authors = ["0line"]

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
actix-rt = "2.10.0"
