[package]
name = "apiusers"
version = "1.81.0"
edition = "2018"
authors = ["0line"]

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"
regex = "1.10.3"
mockall = "0.13.0"
async-trait = "0.1.82"
fake = {version="2", features=['derive']}
rand = "0"
serde_derive = "1.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "uuid", "json", "macros", "chrono"]

[dev-dependencies.sea-orm]
version = "1.1.0-rc.1"
features = ["sqlx-postgres", "macros", "with-json", "with-uuid", "mock", "debug-print"]

[dev-dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
serde-uuid = "1.10.0"

[dev-dependencies]
actix-rt = "2.10.0"
